tests/ui/privacy/privacy1.stderr
error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:135:18
   |
LL |         use bar::baz::{foo, bar};
   |                  ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:53:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:135:18
   |
LL |         use bar::baz::{foo, bar};
   |                  ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:53:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:144:18
   |
LL |         use bar::baz;
   |                  ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:53:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `i` is private
  --> $DIR/privacy1.rs:168:20
   |
LL |     use self::foo::i::A;
   |                    ^ private module
   |
note: the module `i` is defined here
  --> $DIR/privacy1.rs:173:9
   |
LL |         mod i {
   |         ^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:107:16
   |
LL |         ::bar::baz::A::foo();
   |                ^^^  - struct `A` is not publicly re-exported
   |                |
   |                private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:53:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:108:16
   |
LL |         ::bar::baz::A::bar();
   |                ^^^  - struct `A` is not publicly re-exported
   |                |
   |                private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:53:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:110:16
   |
LL |         ::bar::baz::A.foo2();
   |                ^^^  - unit struct `A` is not publicly re-exported
   |                |
   |                private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:53:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:111:16
   |
LL |         ::bar::baz::A.bar2();
   |                ^^^  - unit struct `A` is not publicly re-exported
   |                |
   |                private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:53:5
   |
LL |     mod baz {
   |     ^^^^^^^

error[E0603]: trait `B` is private
  --> $DIR/privacy1.rs:115:16
   |
LL |         ::bar::B::foo();
   |                ^  --- associated function `foo` is not publicly re-exported
   |                |
   |                private trait
   |
note: the trait `B` is defined here
  --> $DIR/privacy1.rs:43:5
   |
LL |     trait B {
   |     ^^^^^^^

error[E0603]: function `epriv` is private
  --> $DIR/privacy1.rs:121:20
   |
LL |             ::bar::epriv();
   |                    ^^^^^ private function
   |
note: the function `epriv` is defined here
  --> $DIR/privacy1.rs:68:9
   |
LL |         fn epriv();
   |         ^^^^^^^^^^^

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:130:16
   |
LL |         ::bar::baz::foo();
   |                ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:53:5
   |
LL |     mod baz {
   |     ^^^^^^^
help: consider importing this function through its public re-export instead
   |
LL |         bar::foo();
   |         ~~~~~~~~

error[E0603]: module `baz` is private
  --> $DIR/privacy1.rs:131:16
   |
LL |         ::bar::baz::bar();
   |                ^^^ private module
   |
note: the module `baz` is defined here
  --> $DIR/privacy1.rs:53:5
   |
LL |     mod baz {
   |     ^^^^^^^
help: consider importing this function through its public re-export instead
   |
LL |         bar::bar();
   |         ~~~~~~~~

error[E0603]: trait `B` is private
  --> $DIR/privacy1.rs:160:17
   |
LL |     impl ::bar::B for f32 { fn foo() -> f32 { 1.0 } }
   |                 ^ private trait
   |
note: the trait `B` is defined here
  --> $DIR/privacy1.rs:43:5
   |
LL |     trait B {
   |     ^^^^^^^

error[E0624]: associated function `bar` is private
  --> $DIR/privacy1.rs:80:23
   |
LL |             fn bar() {}
   |             -------- private associated function defined here
...
LL |         self::baz::A::bar();
   |                       ^^^ private associated function

error[E0624]: associated function `bar` is private
  --> $DIR/privacy1.rs:98:13
   |
LL |         fn bar() {}
   |         -------- private associated function defined here
...
LL |     bar::A::bar();
   |             ^^^ private associated function

error[E0624]: associated function `bar` is private
  --> $DIR/privacy1.rs:105:19
   |
LL |         fn bar() {}
   |         -------- private associated function defined here
...
LL |         ::bar::A::bar();
   |                   ^^^ private associated function

error[E0624]: associated function `bar` is private
  --> $DIR/privacy1.rs:108:24
   |
LL |             fn bar() {}
   |             -------- private associated function defined here
...
LL |         ::bar::baz::A::bar();
   |                        ^^^ private associated function

error[E0624]: method `bar2` is private
  --> $DIR/privacy1.rs:111:23
   |
LL |             fn bar2(&self) {}
   |             -------------- private method defined here
...
LL |         ::bar::baz::A.bar2();
   |                       ^^^^ private method

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0603, E0624.
For more information about an error, try `rustc --explain E0603`.
